# notion-to-kindle

./: .gitignore  README.md  pyproject.toml  run.py
notion_to_kindle/: config.py  main.py
